unpackaged/main/default/objects/Customer_Milestone__c/Customer_Milestone__c.object-meta.xml
<CustomObject>
    <label>Customer Milestone</label>
    <nameField>
        <label>Customer Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>