unpackaged/main/default/objects/Customer_Milestone__c/fields/Account_Employees_at_Creation__c.field-meta.xml
<CustomField>
    <fullName>Account_Employees_at_Creation__c</fullName>
    <label>Account Employees at Creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>