unpackaged/main/default/objects/Customer_Milestone__c/fields/Account_Owner_at_Creation__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_at_Creation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner at Creation</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Milestones1</relationshipName>
    <type>Lookup</type>
</CustomField>