unpackaged/main/default/objects/Customer_Milestone__c/fields/Account_Owner_Role_at_Creation__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Role_at_Creation__c</fullName>
    <label>Account Owner Role at Creation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>