unpackaged/main/default/objects/Customer_Milestone__c/fields/Builders_Involved__c.field-meta.xml
<CustomField>
    <fullName>Builders_Involved__c</fullName>
    <label>Builders Involved</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing builders</fullName>
            </value>
            <value>
                <fullName>New builders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>