unpackaged/main/default/objects/Customer_Milestone__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>CASE(Type__c,
  &quot;Red Account&quot;,&quot;Lifecycle&quot;,
  &quot;Services Complete&quot;,&quot;Lifecycle&quot;,
  &quot;Customer Activated&quot;,&quot;Lifecycle&quot;,
  &quot;Primary Value Moment&quot;,&quot;Lifecycle&quot;,
  &quot;Activity&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>