unpackaged/main/default/objects/Customer_Milestone__c/fields/Customer_Success_Tier_at_Creation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Tier_at_Creation__c</fullName>
    <label>Customer Success Tier at Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Success_Tiers</valueSetName>
    </valueSet>
</CustomField>