unpackaged/main/default/objects/Customer_Milestone__c/fields/Exit_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Exit_Criteria__c</fullName>
    <description>Exit Criteria for a red account to return to healthy standing.</description>
    <inlineHelpText>Exit Criteria for a red account to return to healthy standing.</inlineHelpText>
    <label>Exit Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>