unpackaged/main/default/objects/Customer_Milestone__c/fields/Is_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Complete__c</fullName>
    <formula>IF(ISPICKVAL(Approval_Status__c,&quot;Approved&quot;),Is_Closed__c ,FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Complete?</label>
    <type>Checkbox</type>
</CustomField>