unpackaged/main/default/objects/Customer_Milestone__c/fields/Milestone_Month__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Month__c</fullName>
    <formula>DATE(YEAR(Milestone_Date__c),MONTH(Milestone_Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Month</label>
    <type>Date</type>
</CustomField>