unpackaged/main/default/objects/Customer_Milestone__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Milestones</relationshipLabel>
    <relationshipName>Customer_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>