unpackaged/main/default/objects/Customer_Milestone__c/fields/Owner_Territory__c.field-meta.xml
<CustomField>
    <fullName>Owner_Territory__c</fullName>
    <label>Owner Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Territory</valueSetName>
    </valueSet>
</CustomField>