unpackaged/main/default/objects/Customer_Milestone__c/fields/Plan_Name_at_Creation__c.field-meta.xml
<CustomField>
    <fullName>Plan_Name_at_Creation__c</fullName>
    <label>Plan Name at Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Plan_Names</valueSetName>
    </valueSet>
</CustomField>