unpackaged/main/default/objects/Customer_Milestone__c/fields/Primary_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Primary_Deliverable__c</fullName>
    <inlineHelpText>Link to relevant collateral or the primary deliverable (an app, a presentation, etc). Ensure appropriate Google Drive permissions</inlineHelpText>
    <label>Primary Deliverable</label>
    <type>Url</type>
</CustomField>