unpackaged/main/default/objects/Customer_Milestone__c/fields/PVM_Type__c.field-meta.xml
<CustomField>
    <fullName>PVM_Type__c</fullName>
    <description>Primary Value Moment type. Customer stated value that they are getting out of Retool, related to 3 primary categories: Cost, Revenue, and Risk</description>
    <inlineHelpText>Primary Value Moment type. Customer stated value that they are getting out of Retool, related to 3 primary categories: Cost, Revenue, and Risk.</inlineHelpText>
    <label>PVM Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maximize engineers’ effectiveness and impact [cost]</fullName>
            </value>
            <value>
                <fullName>Launch new products and markets faster [revenue]</fullName>
            </value>
            <value>
                <fullName>Effectively adapt to minimize emerging business risks [risk]</fullName>
            </value>
            <value>
                <fullName>Enable more efficient operations and collaboration [cost]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>