unpackaged/main/default/objects/Customer_Milestone__c/fields/Request_Message_TS__c.field-meta.xml
<CustomField>
    <fullName>Request_Message_TS__c</fullName>
    <formula>Request_MQ__r.Centro__Message_TS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request: Message TS</label>
    <type>Text</type>
</CustomField>