unpackaged/main/default/objects/Customer_Milestone__c/fields/Request_MQ__c.field-meta.xml
<CustomField>
    <fullName>Request_MQ__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request MQ</label>
    <referenceTo>Centro__Message_Queue__c</referenceTo>
    <relationshipLabel>Customer Milestones</relationshipLabel>
    <relationshipName>Customer_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>