unpackaged/main/default/objects/Customer_Milestone__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Milestones2</relationshipName>
    <type>Lookup</type>
</CustomField>