unpackaged/main/default/objects/Customer_Milestone__c/fields/Requested_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_Role__c</fullName>
    <label>Requested By Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>