unpackaged/main/default/objects/Customer_Milestone__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <inlineHelpText>3-5 line summary of what was achieved</inlineHelpText>
    <label>Summary</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>