unpackaged/main/default/objects/Customer_Milestone__c/fields/Time_to_Renewal_at_Creation__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Renewal_at_Creation__c</fullName>
    <label>Time to Renewal at Creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>