unpackaged/main/default/objects/Customer_Milestone__c/fields/Triage_Date__c.field-meta.xml
<CustomField>
    <fullName>Triage_Date__c</fullName>
    <label>Triage Date</label>
    <type>Date</type>
</CustomField>