unpackaged/main/default/objects/Customer_Milestone__c/fields/Trigger_Update_Owner_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Update_Owner_Attribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger: Update Owner Attribution</label>
    <type>Checkbox</type>
</CustomField>