unpackaged/main/default/objects/Customer_Milestone__c/fields/Use_Case_Types__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Types__c</fullName>
    <label>Use Case Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing use cases</fullName>
            </value>
            <value>
                <fullName>New use cases</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>