unpackaged/main/default/objects/Customer_Milestone__c/fields/Was_Champion_Present__c.field-meta.xml
<CustomField>
    <fullName>Was_Champion_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Champion Present?</label>
    <type>Checkbox</type>
</CustomField>