unpackaged/main/default/objects/Customer_Milestone__c/fields/Was_executive_buyer_present__c.field-meta.xml
<CustomField>
    <fullName>Was_executive_buyer_present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Executive Buyer present?</label>
    <type>Checkbox</type>
</CustomField>