unpackaged/main/default/objects/Customer_Milestone__c/validationRules/Business_Review_Delivery_Method.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Review_Delivery_Method</fullName>
    <active>false</active>
    <description>`Virtual` or `Onsite` Delivery Method is required if Business Review, Hackathon, or Technical Enablement milestone is selected.</description>
    <errorConditionFormula>(
  ISPICKVAL(Type__c, &quot;Business Review&quot;) ||
  ISPICKVAL(Type__c, &quot;Hackathon&quot;) ||
  ISPICKVAL(Type__c, &quot;Technical Enablement&quot;)
)
&amp;&amp;  
(
  NOT(ISPICKVAL(Delivery_Method__c, &quot;Virtual&quot;)) ||
  NOT(ISPICKVAL(Delivery_Method__c, &quot;Onsite&quot;))
)</errorConditionFormula>
    <errorMessage>`Virtual` or `Onsite` Delivery Method is required if Business Review, Hackathon, or Technical Enablement milestone is selected.</errorMessage>
</ValidationRule>