unpackaged/main/default/objects/Customer_Milestone__c/validationRules/Created_date_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Created_date_in_future</fullName>
    <active>true</active>
    <errorConditionFormula>Created_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Milestone may not be created with a created date in the future</errorMessage>
</ValidationRule>