unpackaged/main/default/objects/Customer_Milestone__c/validationRules/Must_use_approved_tooling_for_new.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_use_approved_tooling_for_new</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW() &amp;&amp;
ISBLANK(Create_Method__c)</errorConditionFormula>
    <errorMessage>Please use Salesforce or an approved application to create Customer Milestones</errorMessage>
</ValidationRule>