unpackaged/main/default/objects/Customer_Milestone__c/validationRules/Opp_on_bu.validationRule-meta.xml
<ValidationRule>
    <fullName>Opp_on_bu</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Opportunity__c)) &amp;&amp; Opportunity__r.Business_Unit__c != Business_Unit__c</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>Selected opportunity must be related to the Business Unit</errorMessage>
</ValidationRule>