unpackaged/main/default/objects/Customer_Milestone__c/validationRules/Red_account_reasons_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Red_account_reasons_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Entered_Red_Account_Reasons__c) &amp;&amp; ISPICKVAL(Type__c,&quot;Red Account&quot;) &amp;&amp; ISNEW()</errorConditionFormula>
    <errorDisplayField>Entered_Red_Account_Reasons__c</errorDisplayField>
    <errorMessage>Entered Red Account Reasons required for type Red Account</errorMessage>
</ValidationRule>